<resources>
    <string name="app_name">Kalpamrit</string>

    <string name="productImageURL">https://kalpamritmarketing.com/</string>
    <string name="downloadFileURL">https://kalpamritmarketing.com/Admin/images/Download/</string>

    <!--Admob ads id's-->
    <string name="ads_app_id">ca-app-pub-2048799531766624~4961435451</string>
    <string name="ads_banner_first_id">ca-app-pub-2048799531766624/1275061602</string>
    <string name="ads_banner_second_id">ca-app-pub-2048799531766624/2863475444</string>

    <!-- Strings related to login -->
    <string name="password">Password</string>
    <string name="remember_me">Remember Me</string>
    <string name="action_sign_in">Sign In</string>
    <string name="forgot_pswd">Forgot Password ?</string>
    <string name="error_required_user_id">Please Enter User ID.</string>

    <!--Strings Related to Forgot Password-->
    <string name="btn_submit">Submit</string>
    <string name="note">Note :</string>
    <string name="note_detail">1 ) Your new password will be sent on your registered mobile number or Email ID. \n2 ) If you don\'t receive Email or SMS within one hour please contact our support.</string>
    <string name="click_here_to_login">Click Here to Login.</string>

    <!--Strings Related to Register -->
    <string name="new_registration">New Registration</string>
    <string name="who_introduce_you">Who Introduces You to Kalpamrit India</string>
    <string name="sponsorId">Sponsor ID</string>
    <string name="personal_detail">Personal Detail</string>
    <string name="name">Name</string>
    <string name="dob">DOB</string>
    <string name="contact_detail">Contact Detail</string>
    <string name="login_detail">Login Detail</string>
    <string name="address">Address</string>
    <string name="mobile">Mobile Number</string>
    <string name="PANno">PAN Number</string>
    <string name="terms_conditions">Terms &amp; Conditions :- <br /> It is kind advise to you that you promote Business as per actual. Company will not responsible for your miss commitments in the market through any manner.<br />
    Company provides you online account as your ID with password. It contains all your legal information , Transaction Balance, Team detail, Bonus details etc.</string>
    <string name="btn_cancel">Cancel</string>

    <string name="error_required_sponsorID">Please Enter Sponsor ID.</string>
    <string name="error_invalid_sponsorID">Invalid Sponsor ID.</string>
    <string name="error_required_name">Please Enter Name.</string>
    <string name="error_invalid_dob">Invalid DOB.</string>
    <string name="error_required_dob">Please Select DOB.</string>
    <string name="error_required_address">Please Enter Address.</string>
    <string name="error_required_mobile_number">Please Enter mobile number.</string>
    <string name="error_invalid_mobile_number">Invalid Mobile Number.</string>
    <string name="error_invalid_PANno">Invalid PAN Number.</string>
    <string name="error_required_PANno">Please Enter PAN Number.</string>
    <string name="error_required_password">Please Enter Password.</string>
    <string name="error_txnrequired_password">Please Enter Tranaction Password.</string>

    <!--Strings Related to InputType Digits-->
    <string name="alphanumeric">ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz0123456789</string>
    <string name="alphanumericSpace">ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz0123456789  </string>
    <string name="numberic">0123456789</string>

    <!--strings related to change password-->
    <string name="change_password">Change Password</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="error_required_old_password">Please Enter Old Password.</string>
    <string name="error_required_new_password">Please Enter New Password.</string>
    <string name="error_required_confirm_password">Please Enter Confirm Password.</string>
    <string name="password_mismatch">Confirm Password &amp; New Password should be same.</string>
    <string name="update_changes">Update changes</string>
    <string name="password_type">Password Type</string>

    <string name="error_required_pass_type">Please Select Password type.</string>


    <!--Strings Related to DashBoard-->
    <string name="dashboard">Dashboard</string>


    <!--Strings Related to Navigation Drawer-->

    <string name="update_profile">Update Profile</string>
    <string name="view_profile">View Profile</string>
    <string name="new_joining">New Joining</string>
    <string name="upload_kyc">Upload KYC Documents</string>

    <string name="generation_structure">Sponsor Genealogy</string>

    <string name="sponsor_downline">Sponsor Team Detail</string>
    <string name="bv_detail_report">My Direct Members</string>

    <string name="welcome_letter">Welcome Letter</string>

    <!--<string name="purchase_products">Purchase Products</string>-->
    <string name="purchase_reports">My Repurchase BV Detail</string>

    <string name="wallet_detail">Wallet Transaction Report</string>
    <string name="monthly_incentive">Monthly Incentive</string>
    <string name="monthly_incentive_detail_report">Monthly Incentive Detail Report</string>


    <string name="profile_picture">Profile Picture</string>

    <string name="direct_members_detail">Direct Members Detail</string>

    <string name="member_id">Member ID</string>
    <string name="activation_date">Activation Date</string>

    <!--<string name="showing">(Showing 100 of %1$s records)</string>-->
    <!--txt_wb.setText(Html.fromHtml(getResources().getString(R.string.my_wallet_balance, wallet_balance)));-->

    <string name="txt_sponsordetails">Sponsor Details</string>
    <string name="txt_nomineedetails">Nominee Details</string>
    <string name="btn_updateMyProfile">Update Profile</string>

    <string name="txt_userId">User ID</string>

    <string name="txt_gender">Gender</string>
    <string name="txt_email">Email</string>


    <string name="txt_city">City</string>
    <string name="txt_district">District</string>
    <string name="txt_state">State</string>
    <string name="txt_pinCode">Pin Code</string>
    <string name="txt_sponsorID">Sponsor ID</string>
    <string name="txt_sponsorName">Sponsor Name</string>
    <string name="txt_bankName">Bank Name</string>
    <string name="txt_bankAcntNumber">Bank A/C No.</string>
    <string name="txt_bankIfsc">Bank IFSC</string>
    <string name="txt_bankBranch">Bank Branch</string>

    <string name="txt_nomineeRelation">Nominee Relation</string>


    <string name="error_invalid_email">Invalid Email Address.</string>


    <!--Welcome Letter string-->

    <string name="txt_id">ID No</string>

    <string name="txt_joiningDate">Joining Date</string>

    <string name="txt_coSponsorId">Co-Sponsor ID</string>

    <!-- logout message -->
    <string name="txt_signout_message">Are you sure you want to logout ?</string>
    <string name="txt_signout_yes">Yes</string>
    <string name="txt_signout_no">No</string>


    <string name="txt_networkAlert">No Network Connectivity</string>


    <string name="txt_info">Dear Distributor,\nCongratulation, On your decision to soar sky high with us.\n\nYou are now a part of the opportunity of the millennium. an exciting people business. A business that has the potential to Turn Your dreams into reality. As you build your business, you will establish lifelong friendship and develope support system unparalleled in any other business.\n\nis here to H.E.L.P.( High Energy Level participation) you to be successful. We pledge our best effort to provide the level of continuing support necessary to help make you business a total success.\n\nThe bottom line of When you network with us, we all together stand to win and ensure that we effect many hundreds and thousands of lives in positive manner by spreading the total success attitude.\n\nWe are confident that you will get a lot of satisfaction from your involvement with and we wish you every Success!\n\nKeep it up! See you at the top!\n\nWinning Regards,\n
 </string>


    <string name="guardian_name">Guardian Name</string>


    <string-array name="selectRelation">
        <item>S/O</item>
        <item>W/O</item>
        <item>C/O</item>
    </string-array>

    <string-array name="paymentMode">
        <item>Cash on Delivery</item>
        <item>Wallet</item>
        <!--<item>Online Payment</item>-->
    </string-array>

    <!--Strings Related to Home Screen-->
    <!--Section 1-->

    <string name="hint_et_search">What are you looking for ?</string>
    <string name="view_all">View All</string>

    <string name="txt_noProductFound">No Product Found.</string>

    <!--UpdateProfile Screen string-->
    <string name="hint_et_district">Enter District</string>
    <string name="hint_et_city">Enter City</string>
    <string name="hint_txt_pinCode">Pin Code</string>
    <string name="hint_et_pinCode">Enter Pin Code</string>
    <string name="hint_et_email">Enter Email</string>
    <string name="hint_txt_nomineeName">Nominee Name</string>
    <string name="hint_txt_nomineeDob">Nominee DOB</string>
    <string name="txt_bankInfo">Bank Detail</string>

    <!--Change Password Screen string-->

    <string name="error_et_mr_name">Please Enter name.</string>
    <string name="error_et_mr_fname">Please Enter Guardian name.</string>
    <string name="error_et_mr_fname_prefix">Please Select Member Relation.</string>
    <string name="error_et_mr_date">Please Select date of birth.</string>
    <string name="error_et_mr_address">Please Enter address.</string>
    <string name="error_et_mr_state">Please Select state.</string>
    <string name="error_et_mr_mobileNumber">Enter Mobile number</string>
    <string name="error_et_mr_mobileNumber1">Please Enter correct mobile number.</string>
    <string name="error_et_Ifsc">Please Enter IFSC code.</string>
    <string name="error_et_mr_Ifsc">Invalid IFSC code.</string>
    <string name="error_et_mr_PINno">Invalid PIN code.</string>
    <string name="enter_otp_sent">Enter One Time Password (OTP) sent to your mobile number</string>
    <string name="change_mobile_number">change mobile number</string>


    <string name="howrows">How many rows display</string>

    <string-array name="howmanyrows">
        <item>10</item>
        <item>25</item>
        <item>50</item>
        <item>100</item>
        <item>1000</item>
    </string-array>

    <!--Id Card -->
    <string name="card_strng">This Business Card is company property. This card is computer generated and signatures are not required.</string>
    <string name="card_company_name">Kalpamrit Marketing Private Limited </string>
    <string name="card_contact_detail">50 Mansi Enclave, Jagjeetpur Haridwar, Uttarakhand, 249408</string>

    <string name="path_search">
       M141,17 A9,9 0 1,1 142,16 L149,23
    </string>

</resources>