<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@android:color/transparent"
    android:gravity="center"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5sp"
        android:background="@drawable/bg_round_rectangle_gray"
        android:orientation="vertical">

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:fontFamily="@font/gisha_0"
            android:gravity="center_vertical"
            android:padding="10dp"
            android:text="@string/app_name"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/color_orange_text"
            android:textSize="16sp"
            android:visibility="visible" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="#dddddd" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:orientation="vertical">

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/txt_DialogTitle"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/gisha_0"
                    android:lineSpacingExtra="4sp"
                    android:padding="5dp"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@android:color/black"
                    android:textSize="15sp" />
            </ScrollView>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:gravity="center_vertical|end"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/txt_cancel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end|center_vertical"
                    android:background="@drawable/bg_round_rectangle_green"
                    android:fontFamily="@font/gisha_0"
                    android:gravity="center"
                    android:minWidth="80dp"
                    android:padding="10dp"
                    android:text="@string/btn_cancel"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@android:color/white"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/txt_submit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start|center_vertical"
                    android:layout_marginEnd="15dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:layout_marginStart="15dp"
                    android:background="@drawable/bg_round_rectangle_orange_"
                    android:fontFamily="@font/gisha_0"
                    android:gravity="center"
                    android:minWidth="80dp"
                    android:padding="10dp"
                    android:text="@string/btn_submit"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@android:color/white"
                    android:textSize="15sp" />

            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>