<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/transparent"
    android:gravity="center"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@drawable/bg_round_rectangle_gray"
            android:orientation="vertical"
            android:paddingBottom="5dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:fontFamily="@font/gisha_0"
                android:gravity="center_vertical"
                android:padding="10dp"
                android:text="@string/app_name"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/color_orange_text"
                android:textSize="16sp"
                android:visibility="visible" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:background="#dddddd" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/txt_DialogTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="3dp"
                    android:fontFamily="@font/gisha_0"
                    android:padding="3dp"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@color/app_color_black"
                    android:textSize="14sp" />

                <ImageView
                    android:id="@+id/imgView_Upload"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"

                    android:gravity="center"
                    android:scaleType="fitXY"
                    tools:ignore="ContentDescription" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"
                android:layout_weight="1"
                android:gravity="end"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/txt_cancel"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="15dp"
                    android:layout_marginStart="15dp"
                    android:background="@drawable/bg_round_rectangle_green"
                    android:fontFamily="@font/gisha_0"
                    android:gravity="center"
                    android:minWidth="80dp"
                    android:padding="10dp"
                    android:text="@string/btn_cancel"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@android:color/white"
                    android:textSize="15sp"
                    android:visibility="visible" />

                <TextView
                    android:id="@+id/txt_submit"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="end"
                    android:layout_marginEnd="15dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:layout_marginStart="15dp"
                    android:background="@drawable/bg_round_rectangle_orange_"
                    android:fontFamily="@font/gisha_0"
                    android:gravity="center"
                    android:minWidth="80dp"
                    android:padding="10dp"
                    android:text="@string/btn_submit"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@android:color/white"
                    android:textSize="15sp" />

            </LinearLayout>
        </LinearLayout>

    </ScrollView>
</LinearLayout>